# django_tutorial

./: README.md  manage.py  pyproject.toml
config/: settings.py  urls.py
config/settings/: base.py  test.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_id.py
polls/static/polls/: style.css
polls/templates/: base.html  detail.html  index.html
templates/admin/: base_site.html
